# frosty

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml
frosty/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
frosty/example/: frosty_example.dart  testnet_example.dart  tweak_example.dart  tweak_test.dart
frosty/lib/: frosty.dart
frosty/lib/src/: ec_ciphertext.dart  frost_private_info.dart  frost_public_info.dart  frosty_base.dart  identifier.dart  key_share.dart  private_key_share.dart  public_key_shares.dart
frosty/test/: data.dart  ec_ciphertext_test.dart  frost_private_info_test.dart  frost_public_info_test.dart  helpers.dart  identifier_test.dart  private_key_share_test.dart
frosty/test/dkg/: commitment_set_test.dart  helpers.dart  part1_test.dart  part2_test.dart  part3_test.dart  round1_test.dart  (+3 more)
frosty_flutter/: CHANGELOG.md  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
frosty_flutter/android/: build.gradle  settings.gradle
frosty_flutter/example/: README.md  pubspec.yaml
frosty_flutter/ios/: frosty_flutter.podspec
frosty_flutter/lib/: frosty_flutter.dart  frosty_flutter_web.dart
frosty_flutter/linux/: CMakeLists.txt
frosty_flutter/macos/: frosty_flutter.podspec
frosty_flutter/rust/: Cargo.toml
frosty_flutter/rust/src/: frb_generated.rs
frosty_flutter/rust/src/api/: main.rs
frosty_flutter/windows/: CMakeLists.txt
native/: Cargo.toml  build.rs  flutter_rust_bridge.yaml
native/src/: api.rs  bridge_generated.rs  frb_generated.io.rs  frb_generated.rs
native/src/api/: main.rs
scripts/: build-android.sh  build-apple.sh  build-common-container.sh  build-common.sh  build-dev.sh  build-linux.sh  build-wasm.sh  build_android.Dockerfile  build_common.Dockerfile  build_common.Dockerfile.dockerignore  build_linux.Dockerfile  build_wasm.Dockerfile
(+84 files in other folders)
