[package]
name = "frosty_rust"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
anyhow = "1.0.75"
flutter_rust_bridge_codegen = "2.9.0"

[dependencies]
rand = "0.8.4"
anyhow = "1.0.75"
aes-gcm = "0.10.3"
flutter_rust_bridge = "=2.9.0"
frost-secp256k1-tr = "2.1.0"
frost-core = "2.1.0"
