[package]
name = "frosty_rust"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
rand = "0.8.4"
anyhow = "1.0.75"
aes-gcm = "0.10.3"
flutter_rust_bridge = "=2.11.1"
frost-secp256k1-tr = "2.1.0"
frost-core = "2.2.0"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
